# rust-future-example

./: Cargo.toml
src/: main.rs
