[package]
name = "future-example"
version = "0.1.0"
authors = ["yuu <yuuxzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio" }
tokio-uds = { git = "https://github.com/tokio-rs/tokio", package = "tokio-uds", features=["async-traits"] }
